--- a/style/estilos.css
+++ b/style/estilos.css
@@ -4,18 +4,21 @@
     flex-wrap: wrap;
     width: 700px;
     margin: 0 auto;
-}      
+}   
+.placar{
+    text-align: center;
+}   
 .quadro  {              
     width: 105px;
     height: 139px;
-    border: 1px solid black;
+    background-color: black;
     text-align: center;
     position: relative; 
 }
 .cartaFrente img, 
 .cartaCostas img {
-    width: 100px;
-    height: 134px;           
+    max-width: 100%;
+    max-height: 134px;           
 }
 /* define a velocidade da transição */
 .cartas {  	
